@@ -1,0 +1,9 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<mime-info
+xmlns="http://www.freedesktop.org/standards/shared-mime-info">
+  <mime-type type="text/x-xine">
+    <sub-class-of type="text/plain"/>
+    <comment>xine playlist file</comment>
+    <glob pattern="*.tox" />
+  </mime-type>
+</mime-info>
