@@ -1,6 +1,8 @@
 xine-ui (0.99.6) unstable; urgency=low
   (write here, newest entry on top)
 
+  * Install a shared-mime-info entry for .tox files, contributed by
+    Peter Fox in bug #10.
   * New commands/keybindings from Richard van Paasen:
     "PVRSetInput" changes input on ivtv cards (input_pvr);
     "PVRSetMark", "PVRSetName", "PVRSave" enable saving
